letsencrypt/letsencrypt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: letsencrypt
spec:
  rules:
  - host: gate.burntsheep.com
    http:
      paths:
      - path: /.well-known
        backend:
          serviceName: letsencrypt
          servicePort: 80
